--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,17 @@
   text-align: center;
 }
 
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+
+.main-bg {
+  height: 300px;
+  background-image: url('./img/shoes.png');
+  background-size: cover;
+  background-position: center;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -36,3 +44,5 @@
     transform: rotate(360deg);
   }
 }
+
+
